[gd_scene load_steps=5 format=3 uid="uid://8cfxqm5b5bat"]

[ext_resource type="Script" path="res://Scenes/Characters/Druid2.gd" id="1_c2iri"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2lhut"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plhd5"]
albedo_color = Color(0.403922, 0.0352941, 0.439216, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ltkxe"]
material = SubResource("StandardMaterial3D_plhd5")

[node name="Druid2" type="Area3D"]
script = ExtResource("1_c2iri")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
shape = SubResource("SphereShape3D_2lhut")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
mesh = SubResource("SphereMesh_ltkxe")

[node name="Druid_Hum" type="AkEvent3D" parent="."]
event = {
"id": 2213069164,
"name": "Druid_Hum"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Druid_Help_2" type="AkEvent3D" parent="."]
event = {
"id": 1918198540,
"name": "Druid_Help_2"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Druid_Thanks_2" type="AkEvent3D" parent="."]
event = {
"id": 15961762,
"name": "Druid_Thanks_2"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Narrate_Druid" type="AkEvent3D" parent="."]
event = {
"id": 267359535,
"name": "Narrate_Druid"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Druid_Restoration" type="AkEvent3D" parent="."]
event = {
"id": 3824697202,
"name": "Druid_Restoration"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[connection signal="end_of_event" from="Druid_Help_2" to="." method="_on_druid_help_2_end_of_event"]
[connection signal="end_of_event" from="Druid_Thanks_2" to="." method="_on_druid_thanks_2_end_of_event"]
[connection signal="end_of_event" from="Narrate_Druid" to="." method="_on_narrate_druid_end_of_event"]
[connection signal="end_of_event" from="Druid_Restoration" to="." method="_on_druid_restoration_end_of_event"]
